--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -12,9 +12,11 @@
     <p><a class="move-page-top" id="move-page-top">▲</a></p>
 </div>
  
-   <section class="main-header">
-    <img src="<%= asset_path "achieve.png" %>">
-  </section>
+ <section class="main-header">
+  <p class="flash"><%= notice %><%= alert %></p>
+  <img src="<%= asset_path "achieve.png" %>">
+</section>
+   
   <section class="about">
     <h1>About Achieve</h1>
     <p>
